--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids Learning</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar bg-primary align-items-center" data-bs-theme="dark">
+            <div class="mx-auto">
+                <img src="assets/img/a.webp" class="" width="50" height="50" alt="">
+                <a href="#" class="navbar-brand display-1 fs-1 fw-bold">Kids Learning</a>
+                <img src="assets/img/b.webp" class="" width="50" height="50" alt="">
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="hero p-4">
+            <div class="container hero-container h-100">
+                <h1 class="text-center text-white fw-semibold">Bienvenue mon champiom</h1>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body text-center">
+                                <h5 class="card-title display-4 fw-bolder text-primary-emphasis text-center">Alphabet</h5>
+                                <p class="card-text text-center">Avec une interface utilisateur simple et conviviale, viens apprendre l'Alphabet.</p>
+                                <a href="alphabet.html" class="card-link btn btn-outline-primary">Apprendre Maintenant</a>
+                            </div>
+                        </div>
+                        <div class="card mt-1 ms-5" style="width: 18rem;">
+                            <div class="card-body text-center">
+                                <h5 class="card-title display-4 fw-bolder text-primary-emphasis text-center">Nombres</h5>
+                                <p class="card-text text-center">Avec une interface utilisateur simple et conviviale, viens apprendre les nombres.</p>
+                                <a href="nombres.html" class="card-link btn btn-outline-primary">Apprendre Maintenant</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <img src="assets/img/children.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container-fluid bg-dark mt-4 h-100 py-4">
+            <div>
+                <p class="text-center text-white">Copyright 2024 © <b>VODOUNNOU Nicodème Sèlomin</b> </p>
+            </div>
+        </div>
+    </footer>
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
