--- a/alphabet.html
+++ b/alphabet.html
@@ -105,14 +105,14 @@
                     </div>
                 </div>
             </div>
-            <audio id="audioPlayer" src="votre_fichier_audio.mp3"></audio>
+            <audio id="audioPlayer" src="assets/♫ La Chanson de l'Alphabet ♫ French ABC Song ♫ French Alphabet ♫ Les Lettres de l'Alphabet ♫.mp4"></audio>
             <div class="container text-center mt-4">
                 <div class="row justify-content-center">
                     <div class="col-6 col-md-3 mb-2">
                         <button class="btn btn-primary w-100 py-3" onclick="speakText('toulire')" type="button">Tout lire</button>
                     </div>
                     <div class="col-6 col-md-3 mb-2">
-                        <button class="btn btn-secondary w-100 py-3" type="button">Chanter</button>
+                        <button class="btn btn-secondary w-100 py-3" onclick="playAudio()" type="button">Chanter</button>
                     </div>
                 </div>
             </div>
